Fix pre and table overflow

--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ code, table, pre {
 }
 
 pre, table {
+  display: block;
   margin: 2ex 1em;
   max-width: 100%;
   white-space: pre;
